# playlist-update-cli

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
adw/: new_cli_arg.py
ai_docs/: aider-scripting.md
config/: .env  .env.example
patches/: codex-json-output.patch  codex-search-flag-fallback.patch  codex-stdin-not-tty.patch  codex-unsupported-flag-detect.patch  debug-capture-warnings.patch  fix-cli-json-flags.patch  openai-web-api-wrappers.patch  openai-web-score-wrapper.patch  openai-web-search-wrapper-fallback.patch  openai-web-search-wrapper.patch
prompts/: prompt-creating-new-cli-arg-list-rotations.md  prompt-creating-script-to-auto-add-cli-arg.md  prompt-refactoring-to-use-toml.md  prompt-template-v1.md  prompt-testing-shell-script-for-cli.md
proposals/: feature_plan_and_dependencies.md  roadmap.md  suggested_features.md
reference_docs/: new-chart-type.md  new_chart.py
specs/: component_details.md  design_document.md  flow_diagrams.md  playlist_update_cli_refactor_proposal.md  playlist_update_cli_v0.md  state_management.md
src/: anthropic_web_search_wrapper.py  arg_parse.py  conftest.py  db_manager.py  interactive_app.py  main.py  models.py  openai_web_score_wrapper.py  openai_web_search_wrapper.py  rotation_manager.py  scoring.py  setup.py  spotify_manager.py  test_delete_recreate.py  test_import.py  test_list_backups.py  test_mocks.py  test_playlist_update.py  test_rotation.py  test_spotify.py  ui.py  web_search.py
tests/: conftest.py  test_arg_parse.py  test_auth.py  test_backup_restore.py  test_commands.py  test_delete_recreate.py  (+17 more)
(+15 files in other folders)
