[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-playlist-manager"
version = "0.1.0"
description = "A Python script to manage Spotify playlists through the command line"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "python-dotenv>=1.0.0",
    "spotipy>=2.23.0",
    "numpy>=1.24.3",
    "tqdm>=4.65.0",
    "tabulate>=0.9.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.1",
    "aider>=0.9.0",
    "pytest>=7.3.1",
    "click>=8.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
]

[tool.setuptools]
packages = ["src"]
